packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/valid/equivalent-event-type-properties/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if equivalent definitions of the properties of an event type are actually
treated as equivalent in stead of being refused as conflicting definitions.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:mc"/>
    </object-types>
    <concepts/>
    <event-types>
      <event-type name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10"/>
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" confidence="10"/>
        </properties>
        <relations/>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts/>
    <event-types>
      <event-type name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <!-- Property order has changed, optional 'merge' attribute with default value 'drop' has been omitted -->
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" confidence="10"/>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10"/>
        </properties>
        <relations/>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
</edxml>
